Finished -> Merge.java || This is the Java implementation of MergeSort, we split the list until it become a single element list, order the elements and go up the tree of divided lists ordering at each step.